[package]
name = "multiply-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winter-verifier = { path = "/Users/johan.halseth/go/src/github.com/facebook/winterfell/verifier", default-features = false }
winter-crypto = { path = "/Users/johan.halseth/go/src/github.com/facebook/winterfell/crypto", default-features = false }
winter-math = { path = "/Users/johan.halseth/go/src/github.com/facebook/winterfell/math", default-features = false }
winter-air = { path = "/Users/johan.halseth/go/src/github.com/facebook/winterfell/air", default-features = false }
risc0-zkvm-platform = { version = "0.20.1", features = ["export-syscalls"] }
hex-literal = "0.4.1"
